force-app/zurich-base/main/default/objects/Case/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <description>Oficina para casos ZDA.</description>
    <label>Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>