force-app/zurich-base/main/default/objects/Case/fields/OneTimeOrRecurring__c.field-meta.xml
<CustomField>
    <fullName>OneTimeOrRecurring__c</fullName>
    <description>Indica si la tarea representada por un caso de tipo mejora es puntual o recurrente</description>
    <label>One-time or recurring</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Puntual</fullName>
            </value>
            <value>
                <fullName>Recurrente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>