force-app/zurich-base/main/default/objects/Case/fields/OpenNotification__c.field-meta.xml
<CustomField>
    <fullName>OpenNotification__c</fullName>
    <description>OCS. Con el fin de poder enviar notificaciones desde PB/Workflows con tiempo inferior a una hora, se establece esta formula que marcaría la hora en fecha de cierre -55 mins</description>
    <formula>CreatedDate - 55 *(1/24/60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Notification</label>
    <type>DateTime</type>
</CustomField>