force-app/zurich-base/main/default/objects/Case/fields/OtherCaseOpen__c.field-meta.xml
<CustomField>
    <fullName>OtherCaseOpen__c</fullName>
    <formula>MediatedCustomer__r.CaseOpen__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Case Open</label>
    <type>Checkbox</type>
</CustomField>