force-app/zurich-base/main/default/objects/Case/fields/OwnerIdPrior__c.field-meta.xml
<CustomField>
    <fullName>OwnerIdPrior__c</fullName>
    <label>OwnerIdPrior</label>
    <length>25</length>
    <type>Text</type>
</CustomField>