force-app/zurich-base/main/default/objects/Case/fields/OwnerName__c.field-meta.xml
<CustomField>
    <fullName>OwnerName__c</fullName>
    <label>OwnerName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>