force-app/zurich-base/main/default/objects/Case/fields/OwnerUser__c.field-meta.xml
<CustomField>
    <fullName>OwnerUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OwnerUser</label>
    <type>Checkbox</type>
</CustomField>