force-app/zurich-base/main/default/objects/Case/fields/PendingBy__c.field-meta.xml
<CustomField>
    <fullName>PendingBy__c</fullName>
    <description>Especificación del motivo de estado &quot;Pendiente&quot;</description>
    <label>Pending by</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Competency Management</fullName>
            </value>
            <value>
                <fullName>Systems Incidence</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>Other areas Zurich</fullName>
            </value>
            <value>
                <fullName>Other areas Third parties</fullName>
            </value>
            <value>
                <fullName>Intermediary</fullName>
            </value>
            <value>
                <fullName>USP Scaled</fullName>
            </value>
            <value>
                <fullName>Technical Direction</fullName>
            </value>
            <value>
                <fullName>Territorial Direction</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Champion</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Interno RRSS</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Incident Resolution</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>SAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>