force-app/zurich-base/main/default/objects/Case/fields/PersonalizedManager__c.field-meta.xml
<CustomField>
    <fullName>PersonalizedManager__c</fullName>
    <formula>IF( (Industry__c=&apos;Danos-RC Venta&apos; || ((Industry__c=&apos;Generico&apos; || Industry__c=&apos;Cartera&apos;) &amp;&amp; ISPICKVAL(Type , &apos;Venta&apos;))), Account.UWSaleRCDamage__c ,

   IF(Industry__c=&apos;Specialties&apos; &amp;&amp; ISPICKVAL( Type , &apos;Venta&apos;),   Account.UWSaleSpecialties__c ,  
      
       IF(Industry__c=&apos;Construccion&apos; &amp;&amp; ISPICKVAL( Type , &apos;Venta&apos;),    Account.UWSaleBuilding__c , 

              IF(Industry__c=&apos;Cartera&apos;||(Industry__c=&apos;Generico&apos; &amp;&amp;  NOT(ISPICKVAL( Type , &apos;Venta&apos;)) ), Account.UWPortfolioRCDamage__c  , 
                          
                          IF(Industry__c=&apos;Specialties&apos; &amp;&amp; NOT(ISPICKVAL( Type , &apos;Venta&apos;)), Account.UWPortfolioSpecialties__c , 
                               
                                         IF(Industry__c=&apos;Construccion&apos; &amp;&amp; NOT(ISPICKVAL( Type , &apos;Venta&apos;)), 
                                         Account.UWPorfolioBuilding__c,&apos;&apos;) 

                          )

                  
              )
 
       )

   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PersonalizedManager</label>
    <type>Text</type>
</CustomField>