force-app/zurich-base/main/default/objects/Case/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Policy to which is related to</description>
    <label>Póliza</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>