force-app/zurich-base/main/default/objects/Case/fields/PolicyEndDate__c.field-meta.xml
<CustomField>
    <fullName>PolicyEndDate__c</fullName>
    <description>Fecha en la que vence la póliza</description>
    <formula>PolicyId__r.EndDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy End Date</label>
    <type>Date</type>
</CustomField>