force-app/zurich-base/main/default/objects/Case/fields/PolicyId__c.field-meta.xml
<CustomField>
    <fullName>PolicyId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>OCS</description>
    <label>Policy Name</label>
    <referenceTo>Policy__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>