force-app/zurich-base/main/default/objects/Case/fields/PolicyNum__c.field-meta.xml
<CustomField>
    <fullName>PolicyNum__c</fullName>
    <externalId>true</externalId>
    <label>Número de póliza</label>
    <length>80</length>
    <type>Text</type>
</CustomField>