force-app/zurich-base/main/default/objects/Case/fields/PortfolioYear__c.field-meta.xml
<CustomField>
    <fullName>PortfolioYear__c</fullName>
    <description>Campo para introducir el año cartera. Valida que el valor introducido sea un año.</description>
    <label>Año cartera</label>
    <length>4</length>
    <type>Text</type>
</CustomField>