force-app/zurich-base/main/default/objects/Case/fields/PrePolicy__c.field-meta.xml
<CustomField>
    <fullName>PrePolicy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(ZDA) Campo para la prepoliza.</description>
    <label>Prepolicy</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cases (Prepolicy)</relationshipLabel>
    <relationshipName>CasesForPrepolicy</relationshipName>
    <type>Lookup</type>
</CustomField>