force-app/zurich-base/main/default/objects/Case/fields/PrimerMensaje__c.field-meta.xml
<CustomField>
    <fullName>PrimerMensaje__c</fullName>
    <label>Primer Mensaje</label>
    <length>255</length>
    <type>Text</type>
</CustomField>