force-app/zurich-base/main/default/objects/Case/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <formula>PriorityByAssociation__c + PriorityByOlimpia__c + PriorityByRatio__c + 	PriorityByRequested__c + PriorityByStatus__c + PriorityByStatusAnswered__c + PriorityByStatusNewAssigned__c + PriorityByType__c + PriorityByUW__c + PriorityByTypeN3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>