force-app/zurich-base/main/default/objects/Case/fields/PriorityByAssociation__c.field-meta.xml
<CustomField>
    <fullName>PriorityByAssociation__c</fullName>
    <formula>IF(OR(CONTAINS(Account.Association__c,UPPER( $CustomMetadata.Global_Configuration__mdt.Case_Association_Cojebro.Value__c) ),CONTAINS(Account.Association__c, $CustomMetadata.Global_Configuration__mdt.Case_Association_Cojebro.Value__c)),10,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PriorityByAssociation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>