force-app/zurich-base/main/default/objects/Case/fields/PriorityByOlimpia__c.field-meta.xml
<CustomField>
    <fullName>PriorityByOlimpia__c</fullName>
    <formula>IF(ISPICKVAL(Account.AgenteOlimpia__c,&apos;Maratón&apos;),10,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PriorityByOlimpia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>