force-app/zurich-base/main/default/objects/Case/fields/PriorityByRatio__c.field-meta.xml
<CustomField>
    <fullName>PriorityByRatio__c</fullName>
    <formula>IF( Account.USPConversionRatio__c &gt;0.40,10,

IF(Account.USPConversionRatio__c &gt;=0.25 &amp;&amp; Account.USPConversionRatio__c &lt;=0.40,7.5,

IF(Account.USPConversionRatio__c &gt;=0.15 &amp;&amp; Account.USPConversionRatio__c &lt;=0.24,5,0



)

)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PriorityByRatio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>