force-app/zurich-base/main/default/objects/Case/fields/PriorityByRequested__c.field-meta.xml
<CustomField>
    <fullName>PriorityByRequested__c</fullName>
    <formula>IF(Requested__c=true,30,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PriorityByRequested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>