force-app/zurich-base/main/default/objects/Case/fields/PriorityByStatus__c.field-meta.xml
<CustomField>
    <fullName>PriorityByStatus__c</fullName>
    <formula>IF( ISPICKVAL(Status,&quot;Respondido&quot;),10,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PriorityByStatus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>