force-app/zurich-base/main/default/objects/Case/fields/PriorityByStatusNewAssigned__c.field-meta.xml
<CustomField>
    <fullName>PriorityByStatusNewAssigned__c</fullName>
    <formula>IF((TODAY() - DATEVALUE(CreatedDate))&gt;7 &amp;&amp; (ISPICKVAL(Status,&apos;Nuevo&apos;) || ISPICKVAL(Status,&apos;Asignado&apos;) ),30,

IF((TODAY() - DATEVALUE(CreatedDate))&gt;=4 &amp;&amp; (TODAY() - DATEVALUE(CreatedDate))&lt;=7 &amp;&amp; (ISPICKVAL(Status,&apos;Nuevo&apos;) || ISPICKVAL(Status,&apos;Asignado&apos;) ),15,


IF(((TODAY() - DATEVALUE(CreatedDate))==2 || (TODAY() - DATEVALUE(CreatedDate))==3 )&amp;&amp; (ISPICKVAL(Status,&apos;Nuevo&apos;) || ISPICKVAL(Status,&apos;Asignado&apos;) ),5,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PriorityByStatusNewAssigned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>