force-app/zurich-base/main/default/objects/Case/fields/PriorityByType__c.field-meta.xml
<CustomField>
    <fullName>PriorityByType__c</fullName>
    <formula>IF((ISPICKVAL(Type,&quot;Venta&quot;) &amp;&amp; ISPICKVAL(Subtype__c ,&quot;Gestión Competencias&quot;)),10,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PriorityByType</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>