force-app/zurich-base/main/default/objects/Case/fields/PriorityByTypeN3__c.field-meta.xml
<CustomField>
    <fullName>PriorityByTypeN3__c</fullName>
    <formula>IF((ISPICKVAL( TypeN3__c ,&quot;Emisión&quot;)),10,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PriorityByTypeN3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>