force-app/zurich-base/main/default/objects/Case/fields/PriorityByUW__c.field-meta.xml
<CustomField>
    <fullName>PriorityByUW__c</fullName>
    <formula>IF(NOT(ISBLANK(PersonalizedManager__c)),10,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PriorityByUW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>