force-app/zurich-base/main/default/objects/Case/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>Extrae el código del producto relacionado a la póliza del caso. Si el caso no tiene póliza, lo buscara en la oferta asociada.</description>
    <formula>IF(
    AND(
        NOT(ISBLANK(PolicyId__c)),
								NOT(ISBLANK(PolicyId__r.ProductId__c))
								),
    PolicyId__r.ProductId__r.ProductCode,
    IF(
        AND(
            NOT(ISBLANK(OfferId__c)),
            NOT(ISBLANK(OfferId__r.ProductId__c))
								),
        OfferId__r.ProductId__r.ProductCode,
								&apos;&apos;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>