force-app/zurich-base/main/default/objects/Case/fields/ProductGroup__c.field-meta.xml
<CustomField>
    <fullName>ProductGroup__c</fullName>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>HOGAR</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>AUTOS</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>INMUEBLES</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>COMERCIOS</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>ACCIDENTES</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>EMBARCACIONES</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>FLOTAS</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>PATRIMONIALES</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>RESP. CIVIL</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>TECNICOS</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>TRANSPORTES</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>OTROS</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>ACCIDENTES-COLECTIVOS</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>RCDO</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>RCPRO</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>CIBER</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>