force-app/zurich-base/main/default/objects/Case/fields/ProductGroupDescription__c.field-meta.xml
<CustomField>
    <fullName>ProductGroupDescription__c</fullName>
    <description>OCS EON. Descripción del ramo asociado al caso</description>
    <formula>CASE( ProductGroup__c,
&apos;1&apos;, &apos;HOGAR&apos;,
&apos;2&apos;, &apos;AUTOS&apos;,
&apos;3&apos;, &apos;INMUEBLES&apos;,
&apos;4&apos;, &apos;COMERCIOS&apos;,
&apos;5&apos;, &apos;ACCIDENTES&apos;,
&apos;6&apos;, &apos;EMBARCACIONES&apos;,
&apos;7&apos;, &apos;FLOTAS&apos;,
&apos;8&apos;, &apos;PATRIMONIALES&apos;,
&apos;9&apos;, &apos;RESP. CIVIL&apos;,
&apos;10&apos;, &apos;TECNICOS&apos;,
&apos;11&apos;, &apos;TRANSPORTES&apos;,
&apos;12&apos;, &apos;OTROS&apos;,
&apos;14&apos;, &apos;ACCIDENTES-COLECTIVOS&apos;,
&apos;15&apos;, &apos;RCDO&apos;,
&apos;16&apos;, &apos;RCPRO&apos;,
&apos;17&apos;, &apos;CIBER&apos;,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Group Description</label>
    <type>Text</type>
</CustomField>