force-app/zurich-base/main/default/objects/Case/fields/ProductGroupFormula__c.field-meta.xml
<CustomField>
    <fullName>ProductGroupFormula__c</fullName>
    <formula>IF(NOT(ISBLANK(ProductGroupDescription__c)), &quot;Ramo: &quot; + ProductGroupDescription__c,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Group Formula</label>
    <type>Text</type>
</CustomField>