force-app/zurich-base/main/default/objects/Case/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <label>Query</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>