force-app/zurich-base/main/default/objects/Case/fields/QuotationStage__c.field-meta.xml
<CustomField>
    <fullName>QuotationStage__c</fullName>
    <description>EON. Campo que define las etapas de la cotización en curso</description>
    <label>Quotation Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Info request</fullName>
            </value>
            <value>
                <fullName>Quoted</fullName>
            </value>
            <value>
                <fullName>Work in Progress</fullName>
            </value>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>