force-app/zurich-base/main/default/objects/Case/fields/Range__c.field-meta.xml
<CustomField>
    <fullName>Range__c</fullName>
    <description>Rango del producto relacionado con el caso</description>
    <label>Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Motor</fullName>
            </value>
            <value>
                <fullName>Non Motor</fullName>
            </value>
            <value>
                <fullName>PYMEs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>