force-app/zurich-base/main/default/objects/Case/fields/ReasonId__c.field-meta.xml
<CustomField>
    <fullName>ReasonId__c</fullName>
    <description>Último motivo de actualización de datos</description>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Rechazar</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Desestimar</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Respuesta soporte</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>