force-app/zurich-base/main/default/objects/Case/fields/RelatedCuTicketId__c.field-meta.xml
<CustomField>
    <fullName>RelatedCuTicketId__c</fullName>
    <description>Identificador del caso en Canal único con el que este caso está relacionado</description>
    <label>Related CU Ticket Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>