force-app/zurich-base/main/default/objects/Case/fields/RelatedPolicyOffer__c.field-meta.xml
<CustomField>
    <fullName>RelatedPolicyOffer__c</fullName>
    <description>Campo fórmula que muestra el número de póliza u oferta en los Email Templates</description>
    <formula>IF( NOT(ISBLANK(PolicyId__c)) ,&quot;Póliza: &quot; +  PolicyId__r.Name , IF( NOT(ISBLANK( OfferId__c )) ,&quot;Oferta: &quot; +  OfferId__r.Name  , &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RelatedPolicyOffer</label>
    <type>Text</type>
</CustomField>