force-app/zurich-base/main/default/objects/Case/fields/RelatedRequestId__c.field-meta.xml
<CustomField>
    <fullName>RelatedRequestId__c</fullName>
    <description>Identificador del caso en Canal único con el que este caso está relacionado</description>
    <label>Related request id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>