force-app/zurich-base/main/default/objects/Case/fields/ResponseCanalUnico__c.field-meta.xml
<CustomField>
    <fullName>ResponseCanalUnico__c</fullName>
    <description>Respuesta que se envia a Canal unico al cerrar los casos</description>
    <label>Response Canal unico</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>