force-app/zurich-base/main/default/objects/Case/fields/ReturnDate__c.field-meta.xml
<CustomField>
    <fullName>ReturnDate__c</fullName>
    <formula>Owner:User.ReturnDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return Date</label>
    <type>Date</type>
</CustomField>