force-app/zurich-base/main/default/objects/Case/fields/RiskAppetite__c.field-meta.xml
<CustomField>
    <fullName>RiskAppetite__c</fullName>
    <description>EON. Apetito de riesgo para la cotización actual</description>
    <label>Risk Appetite</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Preferente</fullName>
            </value>
            <value>
                <fullName>Moderado</fullName>
            </value>
            <value>
                <fullName>Restringido</fullName>
            </value>
            <value>
                <fullName>Excluido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>