force-app/zurich-base/main/default/objects/Case/fields/RiskAppetiteId__c.field-meta.xml
<CustomField>
    <fullName>RiskAppetiteId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Risk Appetite Id</label>
    <referenceTo>MaestroApetito__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>