force-app/zurich-base/main/default/objects/Case/fields/RiskLocality__c.field-meta.xml
<CustomField>
    <fullName>RiskLocality__c</fullName>
    <description>Población del riesgo en Canal único (ZDA)</description>
    <label>Risk locality</label>
    <type>TextArea</type>
</CustomField>