force-app/zurich-base/main/default/objects/Case/fields/RiskPostalCode__c.field-meta.xml
<CustomField>
    <fullName>RiskPostalCode__c</fullName>
    <description>Código postal del riesgo en Canal único (ZDA)</description>
    <label>Risk postal code</label>
    <length>75</length>
    <type>Text</type>
</CustomField>