force-app/zurich-base/main/default/objects/Case/fields/Robot30mmBilling__c.field-meta.xml
<CustomField>
    <fullName>Robot30mmBilling__c</fullName>
    <description>EON/OCS. Datos del robot tipificador</description>
    <label>Robot30mmBilling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>