force-app/zurich-base/main/default/objects/Case/fields/RobotAappIndicator__c.field-meta.xml
<CustomField>
    <fullName>RobotAappIndicator__c</fullName>
    <description>EON/OCS. Datos del robot tipificador</description>
    <label>RobotAappIndicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>