force-app/zurich-base/main/default/objects/Case/fields/RobotActividadDesc__c.field-meta.xml
<CustomField>
    <fullName>RobotActividadDesc__c</fullName>
    <description>EON/OCS. Datos del robot tipificador</description>
    <label>RobotActividadDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>