force-app/zurich-base/main/default/objects/Case/fields/RobotActivityCod__c.field-meta.xml
<CustomField>
    <fullName>RobotActivityCod__c</fullName>
    <description>EON/OCS. Datos del robot tipificador</description>
    <label>RobotActivityCod</label>
    <length>255</length>
    <type>Text</type>
</CustomField>