force-app/zurich-base/main/default/objects/Case/fields/RobotActivitySegCode__c.field-meta.xml
<CustomField>
    <fullName>RobotActivitySegCode__c</fullName>
    <description>EON/OCS. Datos del robot tipificador</description>
    <label>RobotActivitySegCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>