force-app/zurich-base/main/default/objects/Case/fields/RobotActivitySegDesc__c.field-meta.xml
<CustomField>
    <fullName>RobotActivitySegDesc__c</fullName>
    <description>EON/OCS. Datos del robot tipificador</description>
    <label>RobotActivitySegDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>