force-app/zurich-base/main/default/objects/Case/fields/RobotBusinessStructure__c.field-meta.xml
<CustomField>
    <fullName>RobotBusinessStructure__c</fullName>
    <description>EON/OCS. Datos del robot tipificador</description>
    <label>RobotBusinessStructure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>