force-app/zurich-base/main/default/objects/Case/fields/RobotCompanyActivityCnaeCode__c.field-meta.xml
<CustomField>
    <fullName>RobotCompanyActivityCnaeCode__c</fullName>
    <label>Robot Company Activity Cnae Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>