force-app/zurich-base/main/default/objects/Case/fields/RobotCompanyActivityCnaeDescription__c.field-meta.xml
<CustomField>
    <fullName>RobotCompanyActivityCnaeDescription__c</fullName>
    <label>Robot Company Activity Cnae Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>