force-app/zurich-base/main/default/objects/Case/fields/RobotCompanyActivityIndex__c.field-meta.xml
<CustomField>
    <fullName>RobotCompanyActivityIndex__c</fullName>
    <label>Robot Company Activity Index</label>
    <length>50</length>
    <type>Text</type>
</CustomField>