force-app/zurich-base/main/default/objects/Case/fields/RobotCompanyAdditionalInformation__c.field-meta.xml
<CustomField>
    <fullName>RobotCompanyAdditionalInformation__c</fullName>
    <label>Robot Company Additional Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>