force-app/zurich-base/main/default/objects/Case/fields/RobotCompanyDomicile__c.field-meta.xml
<CustomField>
    <fullName>RobotCompanyDomicile__c</fullName>
    <label>Robot Company Domicile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>