force-app/zurich-base/main/default/objects/Case/fields/RobotCompanyEstimatedBilling__c.field-meta.xml
<CustomField>
    <fullName>RobotCompanyEstimatedBilling__c</fullName>
    <label>Robot Company Estimated Billing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>