force-app/zurich-base/main/default/objects/Case/fields/RobotCompanyEstimatedEmployees__c.field-meta.xml
<CustomField>
    <fullName>RobotCompanyEstimatedEmployees__c</fullName>
    <label>Robot Company Estimated Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>