force-app/zurich-base/main/default/objects/Case/fields/RobotCompanyLatitude__c.field-meta.xml
<CustomField>
    <fullName>RobotCompanyLatitude__c</fullName>
    <label>Robot Company Latitude</label>
    <length>50</length>
    <type>Text</type>
</CustomField>