force-app/zurich-base/main/default/objects/Case/fields/RobotCompanyLocality__c.field-meta.xml
<CustomField>
    <fullName>RobotCompanyLocality__c</fullName>
    <label>Robot Company Locality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>