force-app/zurich-base/main/default/objects/Case/fields/RobotCompanyLongitude__c.field-meta.xml
<CustomField>
    <fullName>RobotCompanyLongitude__c</fullName>
    <label>Robot Company Longitude</label>
    <length>50</length>
    <type>Text</type>
</CustomField>