force-app/zurich-base/main/default/objects/Case/fields/RobotCompanyName__c.field-meta.xml
<CustomField>
    <fullName>RobotCompanyName__c</fullName>
    <label>Robot Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>