force-app/zurich-base/main/default/objects/Case/fields/RobotCompanyProvince__c.field-meta.xml
<CustomField>
    <fullName>RobotCompanyProvince__c</fullName>
    <label>Robot Company Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>