force-app/zurich-base/main/default/objects/Case/fields/RobotCompanyRiskScore__c.field-meta.xml
<CustomField>
    <fullName>RobotCompanyRiskScore__c</fullName>
    <label>Robot Company Risk Score</label>
    <length>100</length>
    <type>Text</type>
</CustomField>