force-app/zurich-base/main/default/objects/Case/fields/RobotCompanyRoadName__c.field-meta.xml
<CustomField>
    <fullName>RobotCompanyRoadName__c</fullName>
    <label>Robot Company Road Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>