force-app/zurich-base/main/default/objects/Case/fields/RobotCompanyRoadNumber__c.field-meta.xml
<CustomField>
    <fullName>RobotCompanyRoadNumber__c</fullName>
    <label>Robot Company Road Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>