force-app/zurich-base/main/default/objects/Case/fields/RobotCompanyRoadType__c.field-meta.xml
<CustomField>
    <fullName>RobotCompanyRoadType__c</fullName>
    <label>Robot Company Road Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>