force-app/zurich-base/main/default/objects/Case/fields/RobotCompanySicCode__c.field-meta.xml
<CustomField>
    <fullName>RobotCompanySicCode__c</fullName>
    <label>Robot Company Sic Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>