force-app/zurich-base/main/default/objects/Case/fields/RobotCompanySicDescription__c.field-meta.xml
<CustomField>
    <fullName>RobotCompanySicDescription__c</fullName>
    <label>Robot Company Sic Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>